--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +21,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- 사이트 기본설정 영역 START -->
+    <meta name="title" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" />
+    <meta name="description" content="Web Publisher Hyera Portfolio showcasing web publishing expertise and design skills. Explore Hyera's web projects and professional background." />
+
+    <meta name="robots" content="ALL" />
+    <meta property="og:title" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" /><!-- 카톡 공유 시 노출되는 사이트명 -->
+    <meta property="og:url" content="https://kimhyera.github.io/portfolio/Main" /><!-- 카톡 공유 시 노출되는 URL -->
+    <meta property="og:image" content="" /><!-- 카톡 공유 시 노출되는 이미지 -->
+    <meta property="og:description" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" /><!-- 카톡 공유 시 노출되는 요약 제목 -->
+    <meta property="og:type" content="website" />
+    <!-- 사이트 유형 (웹사이트로 설정) -->
+    <meta property="og:image" content="이미지 URL" />
+    <!-- 사이트 미리보기 이미지 URL (웹사이트에 이미지가 없다면 사이트 대표 이미지를 추가) -->
+    <meta property="og:site_name" content="Hyera Portfolio" />
+    <!-- 사이트 이름 -->
+    <meta name="keywords" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" /><!-- 검색엔진에 걸릴 수 있는 키워드 설정 -->
+    <meta name="Subject" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" /><!-- 검색엔진에 노출되는 요약 제목 -->
+    <meta name="description" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오 - A showcase of Hyera's work as a web publisher." /><!-- 제목과 더불어 서술되는 내용 요약입니다 -->
+    <meta name="author" content="Hyera Kim" /><!-- 문서 작성자 -->
+    <meta name="copyright" content="" />
+    <!-- <meta name="reply-to" content="help@naver.com"> 문의 메일 -->
+    <meta name="content-language" content="kr" />
+    <meta name="build" content="2025. 02. 07" />
+    <!-- 갱신일 -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="No-Cache" /><!-- 캐시가 되지 않게 하는 태그 -->
+    <meta http-equiv="Pragma" content="No-Cache" /><!-- 캐시에서 해당 페이지를 읽어들이는 걸 방지합니다 -->
+    <title>Web Publisher Hyera Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,17 +63,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-		<script type="text/javascript">
-			(function (l) {
-				if (l.search[1] === '/') {
-					var decoded = l.search.slice(1).split('&').map(function (s) {
-						return s.replace(/~and~/g, '&')
-					}).join('?');
-					window.history.replaceState(null, null,
-						l.pathname.slice(0, -1) + decoded + l.hash
-					);
-				}
-			}(window.location))
-		</script>
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === '/') {
+          var decoded = l.search
+            .slice(1)
+            .split('&')
+            .map(function (s) {
+              return s.replace(/~and~/g, '&');
+            })
+            .join('?');
+          window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
+        }
+      })(window.location);
+    </script>
   </body>
 </html>
