--- a/public/index.html
+++ b/public/index.html
@@ -1,67 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#111827" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-<!-- 사이트 기본설정 영역 START -->
-<meta name="title" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" />
-<meta name="description" content="Web Publisher Hyera Portfolio - A showcase of Hyera's work as a web publisher, showcasing web publishing expertise and design skills." />
-<meta name="robots" content="ALL" />
-
-<!-- OG (Open Graph) 설정 -->
-<meta property="og:title" content="Web Publisher Hyera Portfolio 웹 퍼블리셔 Hyera 포트폴리오" />
-<meta property="og:url" content="https://kimhyera.github.io/portfolio/Main" />
-<meta property="og:image" content="%PUBLIC_URL%/img/og_img.png" /> <!-- 실제 이미지 URL 입력 필요 -->
-<meta property="og:description" content="Explore Hyera's web projects and professional background as a web publisher." />
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="Hyera Portfolio" />
-
-<!-- 검색엔진 최적화 설정 -->
-<meta name="keywords" content="Web Publisher, Hyera, Portfolio, 웹 퍼블리셔, 포트폴리오" />
-<meta name="author" content="Hyera Kim" />
-<meta name="copyright" content="Hyera Kim 2025" /> <!-- 저작권 정보 -->
-<meta name="content-language" content="kr" />
-<meta name="build" content="2025. 03. 04" />
-
-<!-- 캐시 및 콘텐츠 설정 -->
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="Cache-Control" content="No-Cache" />
-<meta http-equiv="Pragma" content="No-Cache" />
-
-<title>Web Publisher Hyera Portfolio</title>
-<!-- 사이트 기본설정 영역 END -->
+    <!-- 사이트 설정 -->
+    <meta name="title" content="Web Publisher Hyera Portfolio" />
+    <meta name="description" content="10년차 웹 퍼블리셔 200여건의 프로젝트 경험과 노하우가 있는 프로젝트를 살펴보세요" />
+    <meta name="robots" content="ALL" />
+    <!-- OG (Open Graph) 설정 -->
+    <meta property="og:title" content="Web Publisher Hyera Portfolio" />
+    <meta property="og:url" content="https://kimhyera.github.io/portfolio" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/og_img.png" />
+    <meta property="og:description" content="10년차 웹 퍼블리셔 200여건의 프로젝트 경험과 노하우가 있는 프로젝트를 살펴보세요" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Hyera Portfolio" />
+    <!-- 검색엔진 최적화 설정 -->
+    <meta name="keywords" content="Web Publisher, Hyera Kim, Portfolio, 웹 퍼블리셔, 포트폴리오" />
+    <meta name="author" content="Hyera Kim" />
+    <meta name="copyright" content="Hyera Kim 2025" />
+    <meta name="content-language" content="kr" />
+    <meta name="build" content="2025. 03. 04" />
+    <!-- 캐시 및 콘텐츠 설정 -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="No-Cache" />
+    <meta http-equiv="Pragma" content="No-Cache" />
+    <title>Web Publisher Hyera Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === '/') {
